--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WarehouseInventorySystem">
         <activity
-            android:name=".presentation.StockViewActivity"
+            android:name="presentation.StockViewActivity"
             android:exported="false"
-            android:parentActivityName=".presentation.MainActivity"/>
+            android:parentActivityName="presentation.MainActivity"/>
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value=".presentation.MainActivity"/>
+            android:value="presentation.MainActivity"/>
         <activity
-            android:name=".presentation.MainActivity"
+            android:name="presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
