--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 02 18:18:11 CST 2022
-sdk.dir=C\:\\Users\\Alex Lannon\\AppData\\Local\\Android\\Sdk
+#Thu Mar 03 16:27:03 CST 2022
+sdk.dir=C\:\\Users\\Curtis\\AppData\\Local\\Android\\Sdk
