--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Mar 03 19:50:52 CST 2022
-sdk.dir=C\:\\Users\\Mansimar\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Abbas\\AppData\\Local\\Android\\Sdk
