--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 03 19:50:52 CST 2022
-sdk.dir=C\:\\Users\\Mansimar\\AppData\\Local\\Android\\Sdk
+#Tue Mar 15 15:01:39 CDT 2022
+sdk.dir=C\:\\Users\\Curtis\\AppData\\Local\\Android\\Sdk
