Added item view activity. added back buttons to Item add activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WarehouseInventorySystem">
         <activity
-            android:name=".ItemAddActivity"
-            android:exported="false" />
+            android:name="presentation.ItemViewActivity"
+            android:exported="false"
+            android:parentActivityName="presentation.MainActivity" />
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="presentation.MainActivity" />
+        
+        <activity
+            android:name="presentation.ItemAddActivity"
+            android:exported="false"
+            android:parentActivityName="presentation.MainActivity" />
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="presentation.MainActivity" />
+
         <activity
             android:name="presentation.StockViewActivity"
             android:exported="false"
