--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity
             android:name="presentation.ItemViewActivity"
             android:exported="false"
-            android:parentActivityName="presentation.MainActivity" />
+            android:parentActivityName="presentation.StockViewActivity" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
