Let account create page go back to main page after account is created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             android:exported="false" />
         <activity
             android:name="presentation.InventoryViewActivity"
+            android:parentActivityName="presentation.MainActivity"
             android:exported="false" />
         <activity
             android:name="presentation.CreateAccountActivity"
